// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionNavigation component component snapshot: no next submission (disabled) 1`] = `
<span
  className="submission-navigation"
>
  <IconButton
    alt="Load previous submission"
    className="ml-1"
    disabled={false}
    iconAs={[Function]}
    onClick={[MockFunction this.props.loadPrev]}
    size="inline"
    src="ChevronLeft"
  />
  <span
    className="ml-1"
  >
    <FormattedMessage
      defaultMessage="{current} of {total}"
      description="Submission navigation location label"
      id="ora-grading.ReviewActions.navigationLabel"
      values={
        Object {
          "current": 5,
          "total": 5,
        }
      }
    />
  </span>
  <IconButton
    alt="Load next submission"
    className="ml-1"
    disabled={true}
    iconAs={[Function]}
    onClick={[MockFunction this.props.loadNext]}
    size="inline"
    src="ChevronRight"
  />
</span>
`;

exports[`SubmissionNavigation component component snapshot: no prev submission (disabled) 1`] = `
<span
  className="submission-navigation"
>
  <IconButton
    alt="Load previous submission"
    className="ml-1"
    disabled={true}
    iconAs={[Function]}
    onClick={[MockFunction this.props.loadPrev]}
    size="inline"
    src="ChevronLeft"
  />
  <span
    className="ml-1"
  >
    <FormattedMessage
      defaultMessage="{current} of {total}"
      description="Submission navigation location label"
      id="ora-grading.ReviewActions.navigationLabel"
      values={
        Object {
          "current": 1,
          "total": 5,
        }
      }
    />
  </span>
  <IconButton
    alt="Load next submission"
    className="ml-1"
    disabled={false}
    iconAs={[Function]}
    onClick={[MockFunction this.props.loadNext]}
    size="inline"
    src="ChevronRight"
  />
</span>
`;
